Multiply: improve SCAR-L materials

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -183,14 +183,17 @@ MRUItem11=/Game/Maps/Black/Map_Black_Whiz
 LastLevel=/Game/Levels/Opalseed
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=SkeletonEditor
+RecentAssetEditors=PhysicsAssetEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -212,8 +215,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -4055,35 +4056,36 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/hu/Firearms/AK704/RD-704_GroupedPart_Skeleton
-MRUItem1=/Game/hu/Firearms/AK704/RD-704_GroupedPart_PhysicsAsset
-MRUItem2=/Game/hu/Firearms/AK704/RD-704_GroupedPart
-MRUItem3=/Game/hu/Firearms/SCARL16/FDE/pistol_grip_A2_FDE
-MRUItem4=/Game/hu/Firearms/SCARL16/FDE/EOTECH_OGL_FDE
-MRUItem5=/Game/hu/Firearms/SCARL16/FDE/SCAR-L_GroupedParts
-MRUItem6=/Game/hu/Firearms/SCARL16/FDE/ammo_556_m855a1_FDE
-MRUItem7=/Game/hu/Firearms/AK704/magazine_FABdefense_ultimag30_glass
-MRUItem8=/Game/hu/Firearms/AK704/tactical_grip_BCM_GUNFIGHTER
-MRUItem9=/Game/hu/Firearms/AK704/Suppressors_WAWE_QD
-MRUItem10=/Game/hu/Firearms/AK704/stock_magpul_zhukov
-MRUItem11=/Game/hu/Firearms/AK704/scope_BRAVO4_reticle
-MRUItem12=/Game/hu/Firearms/AK704/scope_BRAVO4_lens_2
-MRUItem13=/Game/hu/Firearms/AK704/scope_BRAVO4_lens1
-MRUItem14=/Game/hu/Firearms/AK704/scope_BRAVO4
-MRUItem15=/Game/hu/Firearms/AK704/rd_704_receiver
-MRUItem16=/Game/hu/Firearms/AK704/rd_704_handguard
-MRUItem17=/Game/hu/Firearms/AK704/magazine_FABdefense_ultimag30
-MRUItem18=/Game/hu/Firearms/AK704/ammo_762_BP
-MRUItem19=/Game/hu/Firearms/AK704/AK_grip_scorpius
-MRUItem20=/Game/hu/Firearms/AK704/AK_cover_PDC
-MRUItem21=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle
-MRUItem22=/Game/Megascans/Surfaces/Scratched_Painted_Steel_sefndiic/MI_Scratched_Painted_Steel_sefndiic_8K
-MRUItem23=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle
-MRUItem24=/Game/hu/Meshes/SK_Kit_1
-MRUItem25=/Game/hu/Meshes/BP_KIT_3
-MRUItem26=/Game/bodycamFPSkit/Blueprints/BP_AC_ProceduralRecoil
-MRUItem27=/Game/bodycamFPSkit/Blueprints/BP_AC_Camera
-MRUItem28=/Game/bodycamFPSkit/Blueprints/BP_AC_FreeAim
+MRUItem0=/Game/hu/Firearms/SCARL16/FDE/ammo_556_m855a1_FDE
+MRUItem1=/Game/hu/Firearms/SCARL16/FDE/SCAR-L_GroupedParts_Skeleton
+MRUItem2=/Game/hu/Firearms/SCARL16/FDE/SCAR-L_GroupedParts_PhysicsAsset
+MRUItem3=/Game/hu/Firearms/SCARL16/FDE/ROMEO8T_red_dot
+MRUItem4=/Game/hu/Firearms/SCARL16/FDE/SCAR-L_GroupedParts
+MRUItem5=/Game/hu/Firearms/AK704/RD-704_GroupedPart_Skeleton
+MRUItem6=/Game/hu/Firearms/AK704/RD-704_GroupedPart_PhysicsAsset
+MRUItem7=/Game/hu/Firearms/AK704/RD-704_GroupedPart
+MRUItem8=/Game/hu/Firearms/SCARL16/FDE/pistol_grip_A2_FDE
+MRUItem9=/Game/hu/Firearms/SCARL16/FDE/EOTECH_OGL_FDE
+MRUItem10=/Game/hu/Firearms/AK704/magazine_FABdefense_ultimag30_glass
+MRUItem11=/Game/hu/Firearms/AK704/tactical_grip_BCM_GUNFIGHTER
+MRUItem12=/Game/hu/Firearms/AK704/Suppressors_WAWE_QD
+MRUItem13=/Game/hu/Firearms/AK704/stock_magpul_zhukov
+MRUItem14=/Game/hu/Firearms/AK704/scope_BRAVO4_reticle
+MRUItem15=/Game/hu/Firearms/AK704/scope_BRAVO4_lens_2
+MRUItem16=/Game/hu/Firearms/AK704/scope_BRAVO4_lens1
+MRUItem17=/Game/hu/Firearms/AK704/scope_BRAVO4
+MRUItem18=/Game/hu/Firearms/AK704/rd_704_receiver
+MRUItem19=/Game/hu/Firearms/AK704/rd_704_handguard
+MRUItem20=/Game/hu/Firearms/AK704/magazine_FABdefense_ultimag30
+MRUItem21=/Game/hu/Firearms/AK704/ammo_762_BP
+MRUItem22=/Game/hu/Firearms/AK704/AK_grip_scorpius
+MRUItem23=/Game/hu/Firearms/AK704/AK_cover_PDC
+MRUItem24=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle
+MRUItem25=/Game/Megascans/Surfaces/Scratched_Painted_Steel_sefndiic/MI_Scratched_Painted_Steel_sefndiic_8K
+MRUItem26=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle
+MRUItem27=/Game/hu/Meshes/SK_Kit_1
+MRUItem28=/Game/hu/Meshes/BP_KIT_3
+MRUItem29=/Game/bodycamFPSkit/Blueprints/BP_AC_ProceduralRecoil
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -4098,7 +4100,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/hu/Firearms/AK704
+ContentBrowserDrawer.SelectedPaths=/Game/hu/Firearms/SCARL16/FDE
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4726,6 +4728,19 @@ TreeViewWidth=0.300000
 /Game/hu/Firearms/AK704/tactical_grip_BCM_GUNFIGHTER.tactical_grip_BCM_GUNFIGHTER=0
 /Game/hu/Firearms/AK704/RD-704_GroupedPart_PhysicsAsset.RD-704_GroupedPart_PhysicsAsset=0
 /Game/hu/Firearms/AK704/RD-704_GroupedPart_Skeleton.RD-704_GroupedPart_Skeleton=0
+/Game/hu/Firearms/SCARL16/FDE/ROMEO8T_red_dot.ROMEO8T_red_dot=0
+/Game/hu/Firearms/SCARL16/FDE/ROMEO8T_red_dot_lens_1.ROMEO8T_red_dot_lens_1=0
+/Game/hu/Firearms/SCARL16/FDE/ROMEO8T_red_dot_lens_2.ROMEO8T_red_dot_lens_2=0
+/Game/hu/Firearms/SCARL16/FDE/ROMEO8T_red_dot_reticle.ROMEO8T_red_dot_reticle=0
+/Game/hu/Firearms/SCARL16/FDE/SCAR-L_barrel.SCAR-L_barrel=0
+/Game/hu/Firearms/SCARL16/FDE/SCAR-L_buttstock_FDE.SCAR-L_buttstock_FDE=0
+/Game/hu/Firearms/SCARL16/FDE/SCAR-L_magazine_30.SCAR-L_magazine_30=0
+/Game/hu/Firearms/SCARL16/FDE/SCAR-L_receiver_FDE.SCAR-L_receiver_FDE=0
+/Game/hu/Firearms/SCARL16/FDE/silencer_AAC_SDN_FDE.silencer_AAC_SDN_FDE=0
+/Game/hu/Firearms/SCARL16/FDE/vertical_grip_HK_FDE.vertical_grip_HK_FDE=0
+/Game/hu/Firearms/SCARL16/FDE/weapon_light_insight.weapon_light_insight=0
+/Game/hu/Firearms/SCARL16/FDE/SCAR-L_GroupedParts_PhysicsAsset.SCAR-L_GroupedParts_PhysicsAsset=0
+/Game/hu/Firearms/SCARL16/FDE/SCAR-L_GroupedParts_Skeleton.SCAR-L_GroupedParts_Skeleton=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -4788,7 +4803,6 @@ DisplayActorsCount=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
@@ -5324,7 +5338,7 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MouseWheel,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.FireAxis,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MouseWheel,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.FireAxis,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 SkeletalMesh=SkeletalMesh.ImportSettings.Transform
-LODInfoUILayout=SkeletalMesh.ImportSettings.Transform
+LODInfoUILayout=
 BoxComponent=BoxComponent.Collision.Collision
 BP_LevelStream_Flipflop_C=
 K2Node_VariableGet=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
@@ -5346,7 +5360,7 @@ TakeRecorderMicrophoneAudioManager=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 StaticMeshActor=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 LandscapeStreamingProxy=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 SphereComponent=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
