Edit: material weapon default specularity chosen for better light and shadow interactions

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -186,12 +186,12 @@ LastLevel=/Game/Levels/Opalseed
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -219,7 +219,6 @@ OpenAssetsAtExit=/Game/hu/Firearms/SCARL16/FDE_0Spec/SCAR-L_FDE_0Spec_GroupedPar
 OpenAssetsAtExit=/Game/hu/Firearms/SCARL16/FDE/SCAR-L_FDE_GroupedParts.SCAR-L_FDE_GroupedParts
 OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle_NullSpec.BP_Weapon_AmericanRifle_NullSpec
 OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle.BP_Weapon_AmericanRifle
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle_NullSpec.BP_Weapon_Pickup_AmericanRifle_NullSpec
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -4123,13 +4122,13 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle_NullSpec
-MRUItem1=/Game/Materials/MI_Neon_Mesh_Orange
-MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle
-MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle_NullSpec
-MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle
-MRUItem5=/Game/hu/Firearms/SCARL16/FDE/SCAR-L_FDE_GroupedParts
-MRUItem6=/Game/hu/Firearms/SCARL16/FDE_0Spec/SCAR-L_FDE_0Spec_GroupedParts
+MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle
+MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle_NullSpec
+MRUItem2=/Game/hu/Firearms/SCARL16/FDE/SCAR-L_FDE_GroupedParts
+MRUItem3=/Game/hu/Firearms/SCARL16/FDE_0Spec/SCAR-L_FDE_0Spec_GroupedParts
+MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle_NullSpec
+MRUItem5=/Game/Materials/MI_Neon_Mesh_Orange
+MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle
 MRUItem7=/Game/hu/Firearms/SCARL16/FDE_0Spec/EOTECH_OGL_FDE
 MRUItem8=/Game/hu/Firearms/SCARL16/FDE/ROMEO8T_red_dot
 MRUItem9=/Game/hu/Firearms/SCARL16/FDE/pistol_grip_A2_FDE
@@ -4167,7 +4166,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/hu/Firearms/SCARL16/FDE_0Spec
+ContentBrowserDrawer.SelectedPaths=/Game/hu/Firearms/SCARL16/FDE
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4818,7 +4817,7 @@ TreeViewWidth=0.300000
 /Game/hu/Firearms/SCARL16/BLK/ROMEO8T_red_dot_lens_2.ROMEO8T_red_dot_lens_2=0
 /Game/hu/Firearms/SCARL16/BLK/ROMEO8T_red_dot_reticle.ROMEO8T_red_dot_reticle=0
 /Game/hu/Firearms/SCARL16/BLK/ROMEO8T_red_dot.ROMEO8T_red_dot=0
-/Game/hu/Firearms/SCARL16/FDE/SCAR-L_FDE_GroupedParts.SCAR-L_FDE_GroupedParts=1
+/Game/hu/Firearms/SCARL16/FDE/SCAR-L_FDE_GroupedParts.SCAR-L_FDE_GroupedParts=0
 /Game/hu/Firearms/SCARL16/ROMEO8T_red_dot_reticle_PBR.ROMEO8T_red_dot_reticle_PBR=0
 /Game/hu/Firearms/SCARL16/ROMEO8T_red_dot_PBR.ROMEO8T_red_dot_PBR=0
 /Game/hu/Firearms/SCARL16/ROMEO8T_red_dot_lens_1_PBR.ROMEO8T_red_dot_lens_1_PBR=0
@@ -4826,7 +4825,7 @@ TreeViewWidth=0.300000
 /Game/hu/Firearms/SCARL16/ROMEO8T_red_dot_Substrate.ROMEO8T_red_dot_Substrate=1
 /Game/hu/Firearms/SCARL16/ROMEO8T_red_dot_Default.ROMEO8T_red_dot_Default=0
 /Game/hu/Firearms/SCARL16/FDE_0Spec/SCAR-L_FDE_GroupedParts.SCAR-L_FDE_GroupedParts=1
-/Game/hu/Firearms/SCARL16/FDE_0Spec/SCAR-L_FDE_0Spec_GroupedParts.SCAR-L_FDE_0Spec_GroupedParts=1
+/Game/hu/Firearms/SCARL16/FDE_0Spec/SCAR-L_FDE_0Spec_GroupedParts.SCAR-L_FDE_0Spec_GroupedParts=0
 /Game/hu/Firearms/SCARL16/FDE_0Spec/ammo_556_m855a1_FDE.ammo_556_m855a1_FDE=0
 /Game/hu/Firearms/SCARL16/FDE_0Spec/EOTECH_OGL_FDE.EOTECH_OGL_FDE=0
 /Game/hu/Firearms/SCARL16/FDE_0Spec/Flashhider_AAC_BLACKOUT.Flashhider_AAC_BLACKOUT=0
@@ -4843,6 +4842,7 @@ TreeViewWidth=0.300000
 /Game/hu/Firearms/SCARL16/FDE_0Spec/vertical_grip_HK_FDE.vertical_grip_HK_FDE=0
 /Game/hu/Firearms/SCARL16/FDE_0Spec/weapon_light_insight.weapon_light_insight=0
 /Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle_NullSpec.BP_Weapon_Pickup_AmericanRifle_NullSpec=0
+/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle_NullSpec.BP_Weapon_AmericanRifle_NullSpec=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -5038,6 +5038,7 @@ Results=None
 
 [PlacementMode]
 RecentlyPlaced=/Game/hu/Firearms/SCARL16/FDE/SCAR-L_FDE_GroupedParts.SCAR-L_FDE_GroupedParts;
+RecentlyPlaced=/Game/hu/Firearms/SCARL16/FDE_0Spec/SCAR-L_FDE_0Spec_GroupedParts.SCAR-L_FDE_0Spec_GroupedParts;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle_NullSpec.BP_Weapon_Pickup_AmericanRifle_NullSpec;
 RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle1.BP_Weapon_Pickup_AmericanRifle1;
@@ -5056,7 +5057,6 @@ RecentlyPlaced=/Game/hu/Meshes/SK_Kit_1.SK_Kit_1;
 RecentlyPlaced=/Game/Materials/M_Neon_Mesh_Black.M_Neon_Mesh_Black;
 RecentlyPlaced=/Game/Materials/MI_Neon_Mesh_Purple.MI_Neon_Mesh_Purple;
 RecentlyPlaced=/Game/Materials/MI_Neon_Mesh_Purplesrgb1xx1.MI_Neon_Mesh_Purplesrgb1xx1;
-RecentlyPlaced=/Game/Materials/M_Neon_Mesh_Blacklight.M_Neon_Mesh_Blacklight;
 
 [MaterialEditor]
 PrimType=1
@@ -5441,12 +5441,12 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MouseWheel,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.FireAxis,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MouseWheel,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.FireAxis,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 SkeletalMesh=SkeletalMesh.ImportSettings.Transform
-LODInfoUILayout=SkeletalMesh.ImportSettings.Transform
+LODInfoUILayout=
 BoxComponent=BoxComponent.Collision.Collision
 BP_LevelStream_Flipflop_C=
 K2Node_VariableGet=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 BP_Level_Streamer_Flipflop_C=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision
-SceneComponent=
+SceneComponent=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 InputModifierDeadZone=
 InputModifierResponseCurveExponential=
 InputModifierFOVScaling=
