Add: glass material

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -185,10 +185,11 @@ LastLevel=/Game/Levels/Opalseed
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -214,10 +215,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_receiver_lower_BLK.SCAR-L_receiver_lower_BLK
-OpenAssetsAtExit=/Game/hu/Firearms/SCARL16/BLK/SCARL_BLK_Lower.SCARL_BLK_Lower
-OpenAssetsAtExit=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_receiver_upper_BLK.SCAR-L_receiver_upper_BLK
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -627,7 +624,7 @@ InterchangeGenericAssetsPipeline.Skeletal Meshes=True
 InterchangeGenericAssetsPipeline.Animations=True
 InterchangeGenericAssetsPipeline.Materials=True
 InterchangeGenericAssetsPipeline.Textures=True
-PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.PhysicalMaterial=False
 PreviewMaterial.Material=True
 PreviewMaterial.PhysicalMaterialMask=True
 PreviewMaterial.Nanite=True
@@ -637,7 +634,7 @@ PreviewMaterial.Usage=True
 PreviewMaterial.Mobile=True
 PreviewMaterial.ForwardShading=True
 PreviewMaterial.PostProcessMaterial=True
-PreviewMaterial.Refraction=True
+PreviewMaterial.Refraction=False
 PreviewMaterial.WorldPositionOffset=True
 PreviewMaterial.Lightmass=True
 PreviewMaterial.Previewing=True
@@ -2995,6 +2992,15 @@ MaterialExpressionComment.MaterialExpressionComment=True
 MaterialExpressionComment.MaterialExpression=True
 Actor.WorldPartition=True
 Actor.Input=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionStrataTransmittanceToMFP.MaterialExpression=True
+MaterialExpressionPower.MaterialExpressionPower=True
+MaterialExpressionPower.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
 
 [RootWindow]
 ScreenPosition=X=438.000 Y=243.000
@@ -4125,36 +4131,36 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_receiver_lower_BLK
-MRUItem1=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_receiver_upper_BLK
-MRUItem2=/Game/hu/Firearms/SCARL16/BLK/SCARL_BLK_Lower
-MRUItem3=/Game/hu/Firearms/SCARL16/BLKMetal/SCAR-L_BLK_Metal_GroupedParts
-MRUItem4=/Game/hu/Firearms/SCARL16/BLKMetal/weapon_light_insight
-MRUItem5=/Game/hu/Firearms/SCARL16/BLKMetal/vertical_grip_HK_BLK
-MRUItem6=/Game/hu/Firearms/SCARL16/BLKMetal/silencer_AAC_SDN_BLK
-MRUItem7=/Game/hu/Firearms/SCARL16/BLKMetal/SCAR-L_receiver_BLK
-MRUItem8=/Game/hu/Firearms/SCARL16/BLKMetal/SCAR-L_magazine_30_BLK
-MRUItem9=/Game/hu/Firearms/SCARL16/BLKMetal/pistol_grip_A2_BLK
-MRUItem10=/Game/hu/Firearms/SCARL16/BLKMetal/SCARL_BLKMetal_Lower
-MRUItem11=/Game/hu/Firearms/SCARL16/FDE/SCAR-L_FDE_GroupedParts
-MRUItem12=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_BLK_GroupedParts
-MRUItem13=/Game/hu/Firearms/SCARL16/FDE_Metalblend/pistol_grip_A2_FDE
-MRUItem14=/Game/hu/Firearms/SCARL16/FDE_Metalblend/SCAR-L_receiver_FDE
-MRUItem15=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_BLK_GroupedParts_Skeleton
-MRUItem16=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_BLK_GroupedParts_PhysicsAsset
-MRUItem17=/Game/hu/Firearms/SCARL16/BLK/weapon_light_insight
-MRUItem18=/Game/hu/Firearms/SCARL16/BLK/silencer_AAC_SDN_BLK
-MRUItem19=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_magazine_30_BLK
-MRUItem20=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_barrel
-MRUItem21=/Game/hu/Firearms/SCARL16/BLK/ROMEO8T_red_dot_reticle
-MRUItem22=/Game/hu/Firearms/SCARL16/BLK/ROMEO8T_red_dot_lens_2
-MRUItem23=/Game/hu/Firearms/SCARL16/BLK/ROMEO8T_red_dot_lens_1
-MRUItem24=/Game/hu/Firearms/SCARL16/BLK/ROMEO8T_red_dot_BLK
-MRUItem25=/Game/hu/Firearms/SCARL16/BLK/pistol_grip_A2_BLK
-MRUItem26=/Game/hu/Firearms/SCARL16/BLK/Flashhider_AAC_BLACKOUT
-MRUItem27=/Game/hu/Firearms/SCARL16/BLK/EOTECH_OGL_BLK
-MRUItem28=/Game/hu/Firearms/SCARL16/BLK/ammo_556_m855a1
-MRUItem29=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_buttstock_BLK
+MRUItem0=/Game/hu/Firearms/SCARL16/BLKMetal/SCAR-L_BLK_Metal_GroupedParts
+MRUItem1=/Game/Materials/M_Glass
+MRUItem2=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_receiver_upper_BLK
+MRUItem3=/Game/hu/Firearms/SCARL16/BLK/SCARL_BLK_Lower
+MRUItem4=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_receiver_lower_BLK
+MRUItem5=/Game/hu/Firearms/SCARL16/BLKMetal/weapon_light_insight
+MRUItem6=/Game/hu/Firearms/SCARL16/BLKMetal/vertical_grip_HK_BLK
+MRUItem7=/Game/hu/Firearms/SCARL16/BLKMetal/silencer_AAC_SDN_BLK
+MRUItem8=/Game/hu/Firearms/SCARL16/BLKMetal/SCAR-L_receiver_BLK
+MRUItem9=/Game/hu/Firearms/SCARL16/BLKMetal/SCAR-L_magazine_30_BLK
+MRUItem10=/Game/hu/Firearms/SCARL16/BLKMetal/pistol_grip_A2_BLK
+MRUItem11=/Game/hu/Firearms/SCARL16/BLKMetal/SCARL_BLKMetal_Lower
+MRUItem12=/Game/hu/Firearms/SCARL16/FDE/SCAR-L_FDE_GroupedParts
+MRUItem13=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_BLK_GroupedParts
+MRUItem14=/Game/hu/Firearms/SCARL16/FDE_Metalblend/pistol_grip_A2_FDE
+MRUItem15=/Game/hu/Firearms/SCARL16/FDE_Metalblend/SCAR-L_receiver_FDE
+MRUItem16=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_BLK_GroupedParts_Skeleton
+MRUItem17=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_BLK_GroupedParts_PhysicsAsset
+MRUItem18=/Game/hu/Firearms/SCARL16/BLK/weapon_light_insight
+MRUItem19=/Game/hu/Firearms/SCARL16/BLK/silencer_AAC_SDN_BLK
+MRUItem20=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_magazine_30_BLK
+MRUItem21=/Game/hu/Firearms/SCARL16/BLK/SCAR-L_barrel
+MRUItem22=/Game/hu/Firearms/SCARL16/BLK/ROMEO8T_red_dot_reticle
+MRUItem23=/Game/hu/Firearms/SCARL16/BLK/ROMEO8T_red_dot_lens_2
+MRUItem24=/Game/hu/Firearms/SCARL16/BLK/ROMEO8T_red_dot_lens_1
+MRUItem25=/Game/hu/Firearms/SCARL16/BLK/ROMEO8T_red_dot_BLK
+MRUItem26=/Game/hu/Firearms/SCARL16/BLK/pistol_grip_A2_BLK
+MRUItem27=/Game/hu/Firearms/SCARL16/BLK/Flashhider_AAC_BLACKOUT
+MRUItem28=/Game/hu/Firearms/SCARL16/BLK/EOTECH_OGL_BLK
+MRUItem29=/Game/hu/Firearms/SCARL16/BLK/ammo_556_m855a1
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -4169,7 +4175,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/hu/Firearms/SCARL16/BLK
+ContentBrowserDrawer.SelectedPaths=/Game/hu/Firearms/SCARL16/BLKMetal
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4434,9 +4440,9 @@ BillboardComponent="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" "
-PreviewMaterial="\"Object\" "
-Material="\"Object\" "
+MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
 AnimMontage="\"Object\" "
@@ -4517,6 +4523,11 @@ PointLight=
 Light=
 BP_Weapon_Pickup_AmericanRifle_NullSpec_C="\"Object.WeaponVars.WeaponStats\" "
 MaterialExpressionComment="\"Object\" "
+MaterialExpressionScalarParameter="\"Object\" "
+MaterialExpressionStrataTransmittanceToMFP="\"Object\" "
+MaterialExpressionStrataUtilityBase="\"Object\" "
+MaterialExpressionPower="\"Object\" "
+MaterialExpressionAdd="\"Object\" "
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -4903,6 +4914,8 @@ TreeViewWidth=0.300000
 /Game/hu/Firearms/SCARL16/BLK/SCAR-L_receiver_lower_BLK.SCAR-L_receiver_lower_BLK=0
 /Game/hu/Firearms/SCARL16/BLK/SCAR-L_receiver_upper_BLK.SCAR-L_receiver_upper_BLK=0
 /Game/hu/Firearms/SCARL16/BLK/SCARL_BLK_Lower.SCARL_BLK_Lower=0
+/Game/Materials/M_Glass.M_Glass=1
+/Game/hu/Firearms/SCARL16/BLKMetal/SCAR-L_BLK_Metal_GroupedParts.SCAR-L_BLK_Metal_GroupedParts=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -4966,7 +4979,6 @@ DisplayActorsCount=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
