--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -185,12 +185,7 @@ LastLevel=/Game/Levels/Opalseed
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
@@ -201,20 +196,26 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 OpenAssetsAtExit=/Game/hu/Firearms/SCARL/SK_SCARL_BLK.SK_SCARL_BLK
 OpenAssetsAtExit=/Game/hu/Firearms/SCARL/BLKMetal/ammo_556_m855a1.ammo_556_m855a1
+OpenAssetsAtExit=/Game/hu/Firearms/SCARL/BLKMetal/SK_SCARL_BLK_Metal.SK_SCARL_BLK_Metal
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -4131,33 +4132,33 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/hu/Firearms/SCARL/FDE/ammo_556_m855a1_FDE
-MRUItem1=/Game/hu/Firearms/SCARL/M_BLK/M_Tactical_Light_Insight
-MRUItem2=/Game/hu/Firearms/SCARL/M_Shared/M_SCARL_Barrel
-MRUItem3=/Game/hu/Firearms/SCARL/M_Shared/M_Muzzle_Flashhider_AAC_BLACKOUT
-MRUItem4=/Game/hu/Firearms/SCARL/M_Shared/ROMEO8T_red_dot_reticle
-MRUItem5=/Game/hu/Firearms/SCARL/M_Shared/ROMEO8T_red_dot_lens_2
-MRUItem6=/Game/hu/Firearms/SCARL/M_Shared/ROMEO8T_red_dot_lens_1
-MRUItem7=/Game/hu/Firearms/SCARL/SK_SCARL_BLK
-MRUItem8=/Game/hu/Firearms/SCARL/BLKMetal/ammo_556_m855a1
-MRUItem9=/Game/hu/Firearms/SCARL/M_BLK/M_SCARL_Receiver_Lower_BLK
-MRUItem10=/Game/hu/Firearms/SCARL/M_BLK/M_Muzzle_Silencer_AAC_SDN_BLK
-MRUItem11=/Game/hu/Firearms/SCARL/M_BLK/M_SCARL_Receiver_Upper_BLK
-MRUItem12=/Game/hu/Firearms/SCARL/M_BLK/M_Magazine_30_BLK
-MRUItem13=/Game/hu/Firearms/SCARL/M_BLK/M_Sight_Reddot_ROMEO8T_BLK
-MRUItem14=/Game/hu/Firearms/SCARL/M_BLK/M_Pistolgrip_A2_BLK
-MRUItem15=/Game/hu/Firearms/SCARL/M_BLK/M_Tactical_Laser_EOTECH_OGL_BLK
-MRUItem16=/Game/hu/Firearms/SCARL/BLKMetal/SCAR-L_BLK_Metal_GroupedParts
-MRUItem17=/Game/hu/Firearms/SCARL/BLKMetal/weapon_light_insight
-MRUItem18=/Game/hu/Firearms/SCARL/BLKMetal/vertical_grip_HK_BLK
-MRUItem19=/Game/hu/Firearms/SCARL/BLKMetal/silencer_AAC_SDN_BLK
-MRUItem20=/Game/hu/Firearms/SCARL/BLKMetal/SCAR-L_receiver_BLK
-MRUItem21=/Game/hu/Firearms/SCARL/BLKMetal/SCAR-L_magazine_30_BLK
-MRUItem22=/Game/hu/Firearms/SCARL/BLKMetal/pistol_grip_A2_BLK
-MRUItem23=/Game/hu/Firearms/SCARL/FDE/SCAR-L_FDE_GroupedParts
-MRUItem24=/Game/hu/Firearms/SCARL/FDE_Metalblend/SCAR-L_receiver_FDE
-MRUItem25=/Game/hu/Firearms/SCARL/FDE_Metalblend/pistol_grip_A2_FDE
-MRUItem26=/Game/hu/Firearms/SCARL/BLKMetal/SCARL_BLKMetal_Lower
+MRUItem0=/Game/hu/Firearms/SCARL/BLKMetal/SK_SCARL_BLK_Metal
+MRUItem1=/Game/hu/Firearms/SCARL/BLKMetal/ammo_556_m855a1
+MRUItem2=/Game/hu/Firearms/SCARL/SK_SCARL_BLK
+MRUItem3=/Game/hu/Firearms/SCARL/BLKMetal/M_SCARL_Receiver_Upper_BLK
+MRUItem4=/Game/hu/Firearms/SCARL/BLKMetal/M_SCARL_Receiver_Lower_BLK
+MRUItem5=/Game/hu/Firearms/SCARL/FDE/ammo_556_m855a1_FDE
+MRUItem6=/Game/hu/Firearms/SCARL/M_BLK/M_Tactical_Light_Insight
+MRUItem7=/Game/hu/Firearms/SCARL/M_Shared/M_SCARL_Barrel
+MRUItem8=/Game/hu/Firearms/SCARL/M_Shared/M_Muzzle_Flashhider_AAC_BLACKOUT
+MRUItem9=/Game/hu/Firearms/SCARL/M_Shared/ROMEO8T_red_dot_reticle
+MRUItem10=/Game/hu/Firearms/SCARL/M_Shared/ROMEO8T_red_dot_lens_2
+MRUItem11=/Game/hu/Firearms/SCARL/M_Shared/ROMEO8T_red_dot_lens_1
+MRUItem12=/Game/hu/Firearms/SCARL/M_BLK/M_SCARL_Receiver_Lower_BLK
+MRUItem13=/Game/hu/Firearms/SCARL/M_BLK/M_Muzzle_Silencer_AAC_SDN_BLK
+MRUItem14=/Game/hu/Firearms/SCARL/M_BLK/M_SCARL_Receiver_Upper_BLK
+MRUItem15=/Game/hu/Firearms/SCARL/M_BLK/M_Magazine_30_BLK
+MRUItem16=/Game/hu/Firearms/SCARL/M_BLK/M_Sight_Reddot_ROMEO8T_BLK
+MRUItem17=/Game/hu/Firearms/SCARL/M_BLK/M_Pistolgrip_A2_BLK
+MRUItem18=/Game/hu/Firearms/SCARL/M_BLK/M_Tactical_Laser_EOTECH_OGL_BLK
+MRUItem19=/Game/hu/Firearms/SCARL/BLKMetal/weapon_light_insight
+MRUItem20=/Game/hu/Firearms/SCARL/BLKMetal/vertical_grip_HK_BLK
+MRUItem21=/Game/hu/Firearms/SCARL/BLKMetal/silencer_AAC_SDN_BLK
+MRUItem22=/Game/hu/Firearms/SCARL/BLKMetal/SCAR-L_magazine_30_BLK
+MRUItem23=/Game/hu/Firearms/SCARL/BLKMetal/pistol_grip_A2_BLK
+MRUItem24=/Game/hu/Firearms/SCARL/FDE/SCAR-L_FDE_GroupedParts
+MRUItem25=/Game/hu/Firearms/SCARL/FDE_Metalblend/SCAR-L_receiver_FDE
+MRUItem26=/Game/hu/Firearms/SCARL/FDE_Metalblend/pistol_grip_A2_FDE
 MRUItem27=/Game/Materials/M_Glass
 
 [ContentBrowser]
@@ -4173,7 +4174,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/hu/Firearms/SCARL
+ContentBrowserDrawer.SelectedPaths=/Game/hu/Firearms/SCARL/BLKMetal
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4918,6 +4919,10 @@ TreeViewWidth=0.300000
 /Game/hu/Firearms/SCARL/BLKMetal/ammo_556_m855a1.ammo_556_m855a1=0
 /Game/hu/Firearms/SCARL/FDE/ammo_556_m855a1_FDE.ammo_556_m855a1_FDE=1
 /Game/hu/Firearms/SCARL/SK_SCARL_BLK.SK_SCARL_BLK=0
+/Game/hu/Firearms/SCARL/BLKMetal/SK_SCARL_BLK_Metal.SK_SCARL_BLK_Metal=0
+/Game/hu/Firearms/SCARL/BLKMetal/SCAR-L_receiver_BLK.SCAR-L_receiver_BLK=0
+/Game/hu/Firearms/SCARL/BLKMetal/M_SCARL_Receiver_Upper_BLK.M_SCARL_Receiver_Upper_BLK=0
+/Game/hu/Firearms/SCARL/BLKMetal/M_SCARL_Receiver_Lower_BLK.M_SCARL_Receiver_Lower_BLK=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -5112,6 +5117,7 @@ bUseGLTFMaterialInstanceLibrary=False
 Results=None
 
 [PlacementMode]
+RecentlyPlaced=/Game/hu/Firearms/SCARL/BLKMetal/SK_SCARL_BLK_Metal.SK_SCARL_BLK_Metal;
 RecentlyPlaced=/Game/hu/Firearms/SCARL16/BLK/SCARL_BLK_Lower.SCARL_BLK_Lower;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/hu/Firearms/SCARL16/BLKMetal/SCAR-L_BLK_Metal_GroupedParts.SCAR-L_BLK_Metal_GroupedParts;
@@ -5131,7 +5137,6 @@ RecentlyPlaced=/Game/hu/Firearms/scar2/SCAR-H_GroupedParts.SCAR-H_GroupedParts;
 RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter;
 RecentlyPlaced=/Game/hu/Meshes/BP_KIT_3.BP_KIT_3;
 RecentlyPlaced=/Game/hu/Meshes/BP_Kit_2.BP_Kit_2;
-RecentlyPlaced=/Game/AAAModularSoldier/Blueprints/BP_SOF_E.BP_SOF_E;
 
 [MaterialEditor]
 PrimType=1
